fixed menu z-index

--- a/gateway-repo/faostat/faostat.css
+++ b/gateway-repo/faostat/faostat.css
@@ -3546,7 +3546,7 @@ a#btnFS{
     /*-moz-transition: all 0.3s ease 0s;*/
     /*-o-transition: all 0.3s ease 0s;*/
     /*transition: all 0.3s ease 0s;*/
-    z-index: 10000000;
+    z-index: 10;
 }
 
 
